fix(center-desktop): left-align main text

--- a/src/css/banner-center.less
+++ b/src/css/banner-center.less
@@ -204,6 +204,7 @@
   }
 
   #dothiv-cb-left {
+    text-align: left;
     float: left;
     margin-left: 83px;
     width: 645px;
